# crm/src/app/routes/task.js
@@ -1,0 +1,7 @@
+const router = require("express").Router();
+const taskController = require("../controllers/task");
+const auth = require("../middleware/auth");
+
+router.get("/:projectId", [auth], taskController.getAll);
+
+module.exports = router;
